--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-SENDGRID_API_KEY=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
+SENDGRID_API_KEY=
 ALLOWED_HOSTS=*
-SENDGRID_FROM_EMAIL=no-reply@citricsheep.com
-SECRET_KEY=OonIMIU5qix6Huf4_Q7FjiG3vsIEEXBef3FTTnWb8Og
-FROM_EMAIL=no-reply@citricsheep.com
+SENDGRID_FROM_EMAIL=
+SECRET_KEY=
+FROM_EMAIL=
 FRONTEND_LINK=http://www.example.com
